// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (space-in-parens) /src/tslint-eslint-rules/space-in-parens/test.ts[1, 10]: there should be no spaces inside this paren.
ERROR: (space-in-parens) /src/tslint-eslint-rules/space-in-parens/test.ts[1, 17]: there should be no spaces inside this paren.

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
var x = ( 1 + 2 ) * 3;

======
var x = (1 + 2) * 3;

>>>>>> after
"
`;
